--- a/goodbook/css/style_homepage.css
+++ b/goodbook/css/style_homepage.css
@@ -50,7 +50,7 @@ a {
 	color: #dddddd;
 }
 .header_center_icon {
-	margin: 0px 55px;
+	margin: 0px 5%;
 }
 .header_center_icon,
 .header_right_icon {
@@ -203,7 +203,7 @@ a {
 }
 .main_center_element2_icon_div {
 	float: left;
-	margin: 0px 60px;
+	margin: 0px 3%;
 }
 .icon_button {
 	margin-left: 5px;
@@ -294,7 +294,7 @@ a {
 .main_right {
 	position: fixed;
 	width: 100%;
-	left: 1350px;
+	left: 80%;
 }
 .ad_div {
 	width: 100%;
@@ -716,7 +716,10 @@ input[type="submit"] {
 	text-align: center;
 	float: right;
 }
-input[type="submit"]:hover {
+[name="uploadIconImg"]:hover,
+[name="uploadBackgroundImg"]:hover,
+[name="profileChenge"]:hover,
+[name="postButton"]:hover {
 	background-color: #565656;
 }
 .areaBox {
@@ -882,13 +885,10 @@ input[type="submit"]:hover {
 	margin-bottom: 15px;
 }
 input[type="submit"] {
-	margin: 15px 0;
-	padding: 15px 30px;
 	width: 100%;
 	border: none;
-	background: #404040;
-	color: white;
-	font-size: 17px;
+	background: #4c4c4c;
+	color: #dddddd;
 }
 .title {
 	margin: 5px 0px;
